cmake_minimum_required(VERSION 2.8)

project(Samples)

add_subdirectory(${PROJECT_SOURCE_DIR}/Daemon)
add_subdirectory(${PROJECT_SOURCE_DIR}/WatchDog)
add_subdirectory(${PROJECT_SOURCE_DIR}/DaemonAndWatchDog)
add_subdirectory(${PROJECT_SOURCE_DIR}/SingleApplication)
add_subdirectory(${PROJECT_SOURCE_DIR}/DaemonAndRunSingleInstance)
add_subdirectory(${PROJECT_SOURCE_DIR}/BindCPU)
add_subdirectory(${PROJECT_SOURCE_DIR}/Connect)
add_subdirectory(${PROJECT_SOURCE_DIR}/DllParser)
add_subdirectory(${PROJECT_SOURCE_DIR}/ScopeGuard)
add_subdirectory(${PROJECT_SOURCE_DIR}/Timer)
add_subdirectory(${PROJECT_SOURCE_DIR}/Singleton)
add_subdirectory(${PROJECT_SOURCE_DIR}/Signal)
add_subdirectory(${PROJECT_SOURCE_DIR}/ThreadPool)
add_subdirectory(${PROJECT_SOURCE_DIR}/Aop)
add_subdirectory(${PROJECT_SOURCE_DIR}/Base64)
