cmake_minimum_required(VERSION 2.8)

project(Samples)

add_subdirectory(${PROJECT_SOURCE_DIR}/Daemon)
add_subdirectory(${PROJECT_SOURCE_DIR}/WatchDog)
add_subdirectory(${PROJECT_SOURCE_DIR}/DaemonAndWatchDog)
add_subdirectory(${PROJECT_SOURCE_DIR}/SingleApplication)
add_subdirectory(${PROJECT_SOURCE_DIR}/DaemonAndRunSingleInstance)
add_subdirectory(${PROJECT_SOURCE_DIR}/BindCPU)
add_subdirectory(${PROJECT_SOURCE_DIR}/Connect)
add_subdirectory(${PROJECT_SOURCE_DIR}/DllParser)
add_subdirectory(${PROJECT_SOURCE_DIR}/ScopeGuard)
add_subdirectory(${PROJECT_SOURCE_DIR}/Timer)
add_subdirectory(${PROJECT_SOURCE_DIR}/Singleton)
add_subdirectory(${PROJECT_SOURCE_DIR}/Signal)
add_subdirectory(${PROJECT_SOURCE_DIR}/thread_pool)
add_subdirectory(${PROJECT_SOURCE_DIR}/Aop)
add_subdirectory(${PROJECT_SOURCE_DIR}/Base64)
add_subdirectory(${PROJECT_SOURCE_DIR}/Any)
add_subdirectory(${PROJECT_SOURCE_DIR}/FunctionTraits)
add_subdirectory(${PROJECT_SOURCE_DIR}/Variant)
add_subdirectory(${PROJECT_SOURCE_DIR}/Args)
add_subdirectory(${PROJECT_SOURCE_DIR}/ObjectPool)
add_subdirectory(${PROJECT_SOURCE_DIR}/PlacementNew)
add_subdirectory(${PROJECT_SOURCE_DIR}/Optional)
add_subdirectory(${PROJECT_SOURCE_DIR}/Meta)
add_subdirectory(${PROJECT_SOURCE_DIR}/TupleHelper)
add_subdirectory(${PROJECT_SOURCE_DIR}/Traits)
add_subdirectory(${PROJECT_SOURCE_DIR}/Factory)
add_subdirectory(${PROJECT_SOURCE_DIR}/lexical_cast)
add_subdirectory(${PROJECT_SOURCE_DIR}/Lazy)
add_subdirectory(${PROJECT_SOURCE_DIR}/ATimer)
add_subdirectory(${PROJECT_SOURCE_DIR}/MD5)
add_subdirectory(${PROJECT_SOURCE_DIR}/DateTime)
add_subdirectory(${PROJECT_SOURCE_DIR}/String)
add_subdirectory(${PROJECT_SOURCE_DIR}/Range)
add_subdirectory(${PROJECT_SOURCE_DIR}/LinqCpp)
add_subdirectory(${PROJECT_SOURCE_DIR}/thread_guard)
add_subdirectory(${PROJECT_SOURCE_DIR}/invoke)
add_subdirectory(${PROJECT_SOURCE_DIR}/variant_visitor)
add_subdirectory(${PROJECT_SOURCE_DIR}/table_tuple)
